# obs-ai-matting

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
data/locale/: en-US.ini  es-ES.ini
src/: plugin-main.cpp
